@@ -1,5 +1,7 @@
 2002-08-20  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclCkalloc.c:	CONSTified MemoryCmd and CheckmemCmd.
+
 	* README:		Bumped version number to 8.4b3 to distinguish
 	* generic/tcl.h:	HEAD from the 8.4b2 release.
 	* tools/tcl.wse.in:
